kubernetes/deployment.yaml
# ------------------- Service ------------------- #
# Link the Service to an Ingress Router
apiVersion: v1
kind: Service
metadata:
  name: nodejs-api-svc
spec:
  type: NodePort
  ports:
  - port: 80
    name: http
    targetPort: 7777
  - port: 443
    name: https
    targetPort: 7777
  selector:
    app: nodejs-api
---
# ------------------- Deployment ------------------- #

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-api-deployment
spec:
  selector:
    matchLabels:
      app: nodejs-api
      tier: backend
      product: api
  replicas: 2
  template:
    metadata:
      labels:
        app: nodejs-api
        tier: backend
        product: api
    spec:
      containers:
      - name: nodejs-api
        image: coderecipes/nodejs-api:production-578004173f3aedc7ba51d0d0e1006a43c7212a02
        readinessProbe:
          httpGet:
            path: /
            port: 7777
          initialDelaySeconds: 2
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 7777
          initialDelaySeconds: 2
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 150m
            memory: 250Mi
          limits:
            memory: 350Mi
            cpu: 350m
        ports:
        - containerPort: 7777
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
---
